--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,25 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECG Analyzer</title>
+    <title>File Uploader</title>
     <link rel="stylesheet" href="style.css">
     <!-- Include jQuery library -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div id="container">
-        <div id="imageContainer">
-            <h3>Upload Images</h3>
-            <!-- Add a form with a POST method for image upload -->
+        <div id="fileContainer">
+            <h3>Upload Files</h3>
+            <!-- Modify the form for generic file upload -->
             <form id="uploadForm" enctype="multipart/form-data">
-                <input type="file" name="images" id="imageInput" multiple accept="image/*">
+                <!-- Allow multiple files of any type to be selected -->
+                <input type="file" name="files" id="fileInput" multiple>
                 <button type="button" id="submit">Upload</button>
             </form>
-            <div id="previewImages"></div>
+            <div id="previewFiles">
+            </div> <!-- Updated ID for previewing files -->
+            <div id="ecgImageContainer" style ="display:none";>
+                <img id="ecgImage" src="" alt="ECG Tracing" style="max-width:100%; height:auto;">
+            </div>
         </div>
         <div id="resultContainer">
-            <h3>Analysis Results</h3>
+            <h3>Upload Results</h3>
             <p><strong>Heart Rate:</strong> <span id="heartRateResult">N/A</span></p>
             <p><strong>Rhythm:</strong> <span id="rhythmResult">N/A</span></p>
             <p><strong>Anatomic Location:</strong> <span id="anatomicLocationResult">N/A</span></p>
